tdf#138049 different parents for restart dialog depending on ok vs apply

and in ok case hide the to-be-dismissed dialog before putting up
the next dialog

Change-Id: Ie9c0dfc1a7c10f8fd1d7a70749e07db123de2bf9